--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@angular/platform-browser": "~11.2.11",
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
-    "bootstrap": "^5.0.0-beta3",
     "firebase": "^8.4",
+    "flexboxgrid2": "^7.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
