--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "flick-chat",
   "version": "0.0.0",
+  "husky": {
+    "hooks": {
+      "pre-commit": "ng lint"
+    }
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -48,6 +53,7 @@
     "eslint-plugin-prefer-arrow": "latest",
     "firebase-tools": "^9.10.0",
     "fuzzy": "^0.1.3",
+    "husky": "^7.0.1",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.6.0",
