--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
 		"declaration": false,
 		"downlevelIteration": true,
 		"experimentalDecorators": true,
+		"forceConsistentCasingInFileNames": true,
+		"noImplicitReturns": true,
+		"noFallthroughCasesInSwitch": true,
 		"moduleResolution": "node",
 		"importHelpers": true,
 		"target": "es2015",
@@ -16,14 +19,14 @@
 			"es2018",
 			"dom"
 		],
-		"paths": {
-			"@app/*": [
-				"./src/app/*"
+		/*"paths": {
+			"@app*//*": [
+				"./src/app*//*"
 			],
-			"@env/*": [
-				"./src/environments/*"
+			"@env*//*": [
+				"./src/environments*//*"
 			]
-		},
+		}*/
 	},
 	"angularCompilerOptions": {
 		"enableI18nLegacyMessageIdFormat": false
