--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "~11.2.11",
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
+    "@cometchat-pro/chat": "^3.0.0-beta1",
     "firebase": "^8.4",
     "flexboxgrid2": "^7.2.1",
     "rxjs": "~6.6.0",
